@@ -405,6 +405,9 @@
 	- renamed open_mng_and_skip_header() to open_mng_and_skip_sig()
 	- added get_MHDR_data()
 	- added "width" and "height" for MNGs to XML output
+	- added option "verbose" to enable more logging
+	- move some log messages to "verbose" mode
+	- improved some error messages
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
